--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
-    "angular": "1.6.0"
+    "angular": "1.6.0",
+    "aws-sdk": "^2.14.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.14.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
