--- a/worker/rotate_image/package.json
+++ b/worker/rotate_image/package.json
@@ -12,5 +12,8 @@
     "fq": "^0.4.1",
     "sqs-consumer": "^3.4.0",
     "aws-sdk": "^2.14.0"
+  },
+  "dependencies": {
+    "jimp": "^0.2.27"
   }
 }
